examples/valid/09_local_open_shadows_preopen.lane
fn weird_add(a : Int, b : Int) -> Int {
  a
}

let weird_add_ops : Add[Int] = Add::{ add: weird_add }

fn use_weird_add(a : Int, b : Int) -> Int {
  open weird_add_ops
  a + b
}

