examples/invalid/10_function_equals_body.lane
// invalid: functions use block bodies, not equals-sign expression bodies
fn add(a : Int, b : Int) -> Int = a + b

